clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-nginx
  labels:
    app: nginx-server
spec:
  type: ClusterIP
  selector:
    app: nginx-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
